[package]
name = "nice_numbers_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
malachite = "0.3.2"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
# debug=true

[profile.bench]
lto = true
# debug=true
# panic = "abort"